<resources>
    <string name="app_name">Sabi</string>

    <!-- TODO:Onboarding String asset -->

    <string name="what_is_sabi">What is SABI?</string>
    <string name="desc_1">SABI is a sign language translator mobile application that can make it easier for users to understand and communicate in sign language.                                    </string>
    <string name="why_sabi">Why SABI?</string>
    <string name="desc_2">SABI provides the main features in the form of a sign language dictionary feature and a sign language translator feature that is easy to use with an attractive appearance.</string>
    <string name="how_to_sabi">How to use SABI?</string>
    <string name="desc_3">You can see sign language from different letters and words. You can also use the available search feature to find the word you want in sign language.</string>
    <string name="skip">Skip</string>
    <string name="camera">Camera</string>
    <string name="btn_camera_home">Detect sign language movements by pointing the camera and get the translation results.</string>
    <string name="dictonary">Dictonary</string>
    <string name="btn_dictonary_home">See sign language from different letters and words. You can also use the available search feature to find the word you want in sign language.</string>
    <string name="search">Search</string>
    <string name="camera_tips">Scan ke arah object atau upload gambar</string>

    <!-- TODO:Content Description -->
    <string name="app_title">App Title</string>
    <string name="active_circle">active_circle</string>
    <string name="deactive_circle">deactive_circle</string>
    <string name="onboarding_ilustration_1">Onboarding Ilustration 1</string>
    <string name="onboarding_ilustration_2">onboarding ilustration 2</string>
    <string name="onboarding_ilustration_3">onboarding ilustration 3</string>
</resources>